src/objects/Revenue_Unit__c.object
<CustomObject>
    <description>[Object to support Zuora royalty solution]
This object houses the device revenue units feed from MDW, for Zuora royalty processing</description>
    <fields>
        <fullName>APC_Description__c</fullName>
        <label>APC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AP_ExportID__c</fullName>
        <label>AP ExportID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AQ_ExportID__c</fullName>
        <label>AQ ExportID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Period__c</fullName>
        <label>Account Period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Quarter__c</fullName>
        <label>Account Quarter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acct Calendar</label>
        <referenceTo>Acct_Calendar__c</referenceTo>
        <relationshipLabel>Revenue Units</relationshipLabel>
        <relationshipName>Revenue_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BackDate__c</fullName>
        <label>BackDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_FTT__c</fullName>
        <label>Customer FTT</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Revenue Units</relationshipLabel>
        <relationshipName>Revenue_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_1__c</fullName>
        <label>Future 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_2__c</fullName>
        <label>Future 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_APC__c</fullName>
        <label>GL APC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <label>GL Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Business_Group__c</fullName>
        <label>GL Business Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_CC__c</fullName>
        <label>GL CC</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Legal_Entity__c</fullName>
        <label>GL Legal Entity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_TOS__c</fullName>
        <label>GL TOS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intercompany__c</fullName>
        <label>Intercompany</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Name__c</fullName>
        <label>Internal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Market_Name__c</fullName>
        <label>Item Market Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type_Description__c</fullName>
        <label>Item Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDW_DW_Insert_DT__c</fullName>
        <label>MDW_DW_Insert_DT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDW_ROW_ID__c</fullName>
        <description>This field is unique in the MDW source, and is used to prevent duplicate records from loading into Salesforce.  By making this field unique in SFDC, we can prevent duplicate entries from MDW loading in</description>
        <externalId>true</externalId>
        <label>MDW ROW ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSAD__c</fullName>
        <label>NSAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ON_Invoice_Units__c</fullName>
        <label>ON Invoice Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Line_Number__c</fullName>
        <label>Order Line Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pack_Date__c</fullName>
        <label>Pack Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Packing_List_Number__c</fullName>
        <label>Packing List Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedDate__c</fullName>
        <label>ProcessedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Invoice</label>
        <referenceTo>Revenue_Invoice__c</referenceTo>
        <relationshipLabel>Revenue Units</relationshipLabel>
        <relationshipName>Revenue_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Source__c</fullName>
        <label>Revenue Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Units__c</fullName>
        <label>Revenue Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SWKit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Kit</label>
        <referenceTo>SW_Kit__c</referenceTo>
        <relationshipLabel>Revenue Units</relationshipLabel>
        <relationshipName>Revenue_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Model</label>
        <referenceTo>Sales_Model__c</referenceTo>
        <relationshipLabel>Revenue Units</relationshipLabel>
        <relationshipName>Revenue_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <label>Sales Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Stage 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unprocessed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reprocess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Revenue Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>MDW_DW_Insert_DT__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Item_Type_Description__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Ship_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Month__c</field>
            <operation>contains</operation>
            <value>M12</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>error</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>RevUnit_Errors</fullName>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>ProcessedDate__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Sales_Model__c</columns>
        <columns>Device__c</columns>
        <columns>Batch_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>RevUnit Errors</label>
    </listViews>
    <listViews>
        <fullName>generic_list_view</fullName>
        <columns>NAME</columns>
        <columns>Fiscal_Month__c</columns>
        <columns>Status__c</columns>
        <columns>BackDate__c</columns>
        <columns>Batch_Id__c</columns>
        <columns>ProcessedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessedDate__c</field>
            <operation>equals</operation>
            <value>12/31/2014</value>
        </filters>
        <label>Generic List View</label>
    </listViews>
    <nameField>
        <displayFormat>RU-{000000000}</displayFormat>
        <label>Revenue Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>